scrollbar fix dashboard.html and dropdowns

--- a/src/main/resources/static/css/design.css
+++ b/src/main/resources/static/css/design.css
@@ -359,4 +359,37 @@ margin: 3px;
     max-width: 500px;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+    z-index: -1;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #E8E9F3;
+    border: none;
+    z-index: +3;
+}
+.scrollbar::-webkit-scrollbar-track{
+    background: none;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border: #888;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.ticket-information{
+    position: -webkit-sticky;
+    position: sticky;
+}
 
